# rind

./: .gitignore  Cargo.toml  README.md  builder.toml  features.txt  flake.nix  todo.txt
examples/: fallback.toml  state
examples/services/: else.toml  example.toml  something.toml
examples/units/: else.toml  tp_demo.toml  tr_demo.toml
rind-cli/: Cargo.toml
rind-cli/demo/: active.rs  inactive.rs  uds_echo.rs  user_login.rs  user_shell.rs
rind-cli/src/: macros.rs  print.rs  rind.rs
rind-common/: Cargo.toml
rind-common/src/: common.rs  config.rs  error.rs  fs_async.rs  logger.rs  utils.rs
rind-core/: Cargo.toml
rind-core/src/: core.rs  logger.rs  lookup.rs  mount.rs  name.rs  services.rs  store.rs  units.rs
rind-core/src/flow/: flow.rs  mod.rs  transport.rs  triggers.rs
rind-core/src/flow/transports/: args.rs  env.rs  mod.rs  stdio.rs  uds.rs
rind-core/src/utils/: mod.rs
rind-daemon/: Cargo.toml
rind-daemon/src/: daemon.rs
rind-init/: Cargo.toml
rind-init/src/: init.rs
rind-ipc/src/: ipc.rs  recv.rs  ser.rs
rind-logger/: Cargo.toml
