[workspace]
members = ["rind-cli", "rind-daemon", "rind-core", "rind-init", "rind-ipc", "rind-common"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
once_cell = "*"
# sdlang = "*"
toml = "*"
glob = "*"
nix = { version = "*", features = ["process", "acct", "socket", "term", "poll", "signal", "mount"] }
libc = "*"
serde = { version = "*", features = ["derive"] }
anyhow = "*"
clap = { version = "*", features = ["derive"] }
strumbra = "*"
serde_json = "1"
bincode-next = "*"
crc32fast = "*"
fxhash = "*"
wait-timeout = "*"

[profile.release]
lto = true
panic = "abort"
strip = true
