[package]
name = "rind-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rind"
path = "src/rind.rs"

[[bin]]
name = "example-active"
path = "demo/active.rs"

[[bin]]
name = "example-inactive"
path = "demo/inactive.rs"

[dependencies]
clap.workspace = true
rind-ipc = { path = "../rind-ipc", default-features = false, features = [] }
rind-common = { path = "../rind-common" }

serde_json.workspace = true

owo-colors = "4.3.0"
