[package]
name = "rind-core"
version.workspace = true
edition.workspace = true

[lib]
path = "src/core.rs"

[dependencies]
rind-common = { path = "../rind-common" }
toml.workspace = true
serde.workspace = true
once_cell.workspace = true
anyhow.workspace = true
nix.workspace = true
libc.workspace = true
wait-timeout.workspace = true
