[package]
name = "rind-daemon"
version.workspace = true
edition.workspace = true

[lib]
path = "src/daemon.rs"

[dependencies]
rind-core = { path = "../rind-core" }
rind-common = { path = "../rind-common" }
rind-ipc = { path = "../rind-ipc" }
anyhow.workspace = true
regex = "1.12.3"
env_logger = "0.11.9"
log = "0.4.29"
