[package]
name = "rind-init"
version.workspace = true
edition.workspace = true

[[bin]]
name = "init"
path = "src/init.rs"

[dependencies]
backoff = "0.4.0"
libc.workspace = true
nix.workspace = true
rind-common = { path = "../rind-common" }
rind-core = { path = "../rind-core" }
rind-daemon = { path = "../rind-daemon" }
